--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 </head>
 
 <body>
-    <div class="bgimg">
-        <p>test</p>
+    <figure>
         <img src="/zero-take-glDy-ZGIlCs-unsplash.jpg" alt="a cherry blossom photo">
+        <figcaption>TEST</figcaption>
+    </figure>
     </div>
     <div class="wrapper">
         <header>
-            <h1>This is not a real online service! You know you need something like this in your life to help you
+            <h1>This is not a real online service! You know you need something <br> like this in your life to help you
                 realize
                 your
-                deepest dreams. Sign up <i>now</i> to get started.</h1>
+                deepest dreams. <br> Sign up <i>now</i> to get started.</h1>
             <h2>You <i>know</i> you want to.</h2>
         </header>
-        <h3>Let's do this !</h3>
         <div class="formWrapper">
+            <h3>Let's do this !</h3>
             <form class="form" action="" method="">
                 <div>
                     <label for="first_name">First Name:</label>
@@ -56,7 +57,8 @@
         </div>
         <footer>
             <button class="createAccount">Create Account</button>
-            <h4>Already have an account? <p>Log in</p>
+            <h4>Already have an account?&nbsp;
+                <p>Log in</p>
             </h4>
         </footer>
     </div>
