--- a/index.html
+++ b/index.html
@@ -17,50 +17,49 @@
         <img src="/zero-take-glDy-ZGIlCs-unsplash.jpg" alt="a cherry blossom photo">
         <figcaption>TEST</figcaption>
     </figure>
-    </div>
     <div class="wrapper">
         <header>
             <h1>This is not a real online service! You know you need something <br> like this in your life to help you
-                realize
-                your
-                deepest dreams. <br> Sign up <i>now</i> to get started.</h1>
+                realize your deepest dreams. <br> Sign up <i>now</i> to get started.</h1>
             <h2>You <i>know</i> you want to.</h2>
         </header>
         <div class="formWrapper">
             <h3>Let's do this !</h3>
-            <form class="form" action="" method="">
+            <form class="form" action="#" method="get">
                 <div>
                     <label for="first_name">First Name:</label>
-                    <input type="text" name="first_name" id="first_name" placeholder="Homer">
+                    <input type="text" name="first_name" id="first_name" placeholder="Homer" required>
                 </div>
                 <div>
                     <label for="last_name">Last Name:</label>
-                    <input type="text" name="first_name" id="last_name" placeholder="Simpson">
+                    <input type="text" name="first_name" id="last_name" placeholder="Simpson" required>
                 </div>
                 <div>
                     <label for="user_email">Email Adress:</label>
-                    <input type="email" name="user_email" id="user_email" placeholder="you@example.com">
+                    <input type="email" name="user_email" id="user_email" placeholder="you@example.com" required>
                 </div>
                 <div>
                     <label for="user_number">Phone Number:</label>
-                    <input type="tel" name="user_number" id="user_number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                    <input type="tel" name="user_number" id="user_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                        placeholder="123-456-7890" required>
                 </div>
                 <div>
                     <label for="user_password">Password:</label>
-                    <input type="text" name="user_password" id="user_password">
+                    <input type="password" name="user_password" id="user_password" required>
                 </div>
                 <div>
                     <label for="user_passwordCheck">Confirm Password:</label>
-                    <input type="text" name="user_passwordCheck" id="user_passwordCheck">
+                    <input type="password" name="user_passwordCheck" id="user_passwordCheck" required>
                 </div>
+                <button class="createAccount" type="submit">Create Account</button>
             </form>
         </div>
         <footer>
-            <button class="createAccount">Create Account</button>
             <h4>Already have an account?&nbsp;
-                <p>Log in</p>
+                <span>Log in</span>
             </h4>
         </footer>
+
     </div>
 </body>
 
