Lot of CSS done, need cleanup and comments

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>Sign UP Now !</title>
 </head>
 
 <body>
     <figure>
-        <img src="/zero-take-glDy-ZGIlCs-unsplash.jpg" alt="a cherry blossom photo">
-        <figcaption>TEST</figcaption>
+        <img src="./assets/shri-BA_i8d6uVqk-unsplash.jpg" alt="a cherry blossom photo">
+        <figcaption>
+            MOMENTUM
+        </figcaption>
     </figure>
     <div class="wrapper">
         <header>
@@ -27,28 +32,28 @@
             <h3>Let's do this !</h3>
             <form class="form" action="#" method="get">
                 <div>
-                    <label for="first_name">First Name:</label>
+                    <label for="first_name">FIRST NAME:</label>
                     <input type="text" name="first_name" id="first_name" placeholder="Homer" required>
                 </div>
                 <div>
-                    <label for="last_name">Last Name:</label>
+                    <label for="last_name">LAST NAME:</label>
                     <input type="text" name="first_name" id="last_name" placeholder="Simpson" required>
                 </div>
                 <div>
-                    <label for="user_email">Email Adress:</label>
+                    <label for="user_email">EMAIL ADRESS:</label>
                     <input type="email" name="user_email" id="user_email" placeholder="you@example.com" required>
                 </div>
                 <div>
-                    <label for="user_number">Phone Number:</label>
+                    <label for="user_number">PHONE NUMBER:</label>
                     <input type="tel" name="user_number" id="user_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                         placeholder="123-456-7890" required>
                 </div>
                 <div>
-                    <label for="user_password">Password:</label>
+                    <label for="user_password">PASSWORD:</label>
                     <input type="password" name="user_password" id="user_password" required>
                 </div>
                 <div>
-                    <label for="user_passwordCheck">Confirm Password:</label>
+                    <label for="user_passwordCheck">CONFIRM PASSWORD:</label>
                     <input type="password" name="user_passwordCheck" id="user_passwordCheck" required>
                 </div>
                 <button class="createAccount" type="submit">Create Account</button>
