--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </div>
                 <div>
                     <label for="user_number">PHONE NUMBER:</label>
-                    <input type="tel" name="user_number" id="user_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                        placeholder="123-456-7890" required>
+                    <input type="tel" name="user_number" id="user_number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                    <label class="ex" for="user_number">*123-456-7890</label>
                 </div>
                 <div>
                     <label for="user_password">PASSWORD:</label>
