deleted form method

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <div class="formWrapper">
             <h3>Let's do this !</h3>
-            <form class="form" action="#" method="get">
+            <form class="form" action="#">
                 <div>
                     <label for="first_name">FIRST NAME:</label>
                     <input type="text" name="first_name" id="first_name" placeholder="Homer" required>
